fix: change body width to auto and height to dvh to avoid getting unnecessary scrollbars

--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@ body {
 }
 
 .container {
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: auto;
 }
 
 a {
